--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ https://www.googletagmanager.com/gtag/js?id=AW-578936958"></script> <script> win
 
     
 
-<!-- <style>
+<style>
     #content .layoutwidget>header {
        margin-bottom: 0;
    }
@@ -391,7 +391,7 @@ https://www.googletagmanager.com/gtag/js?id=AW-578936958"></script> <script> win
        }
    }
    
-   . project-list-survey .sg-question {
+   .project-list-survey .sg-question {
        border-bottom: 3px solid #777 !important;
    }
    
@@ -410,7 +410,7 @@ https://www.googletagmanager.com/gtag/js?id=AW-578936958"></script> <script> win
    }
    /* end surveys */
    /* tab sliders */
-   .carousel-indicators li,
+   /* .carousel-indicators li,
    {
    border: none;
    background-image: url(https://placehold.it/110x45);
@@ -418,7 +418,7 @@ https://www.googletagmanager.com/gtag/js?id=AW-578936958"></script> <script> win
    width: 110px;
    height: 45px;
    }
-   
+    */
    .carousel-indicators li.active {
        border: solid 2px #008cb9 !important;
    }
@@ -832,7 +832,7 @@ https://www.googletagmanager.com/gtag/js?id=AW-578936958"></script> <script> win
        margin-left: auto;
        margin-bottom: 6px;
    }
-   </style> -->
+   </style>
    
        <!-- Google Tag Manager -->
        <script>
