--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="es" class="static detail-page dir-ltr contents" dir="ltr" >
+<html lang="es-419" class="static detail-page dir-ltr contents" dir="ltr" >
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8" />
