Added tacoma dome img

--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,7 @@ https://www.googletagmanager.com/gtag/js?id=AW-578936958"></script> <script> win
                     </div>
                     <div class=" col-md-4">
                     <p>&nbsp;</p>
-                    <figure><a href="https://oohsttdlink.blob.core.windows.net/media/Default/images/2020_0908_TDLE_StationPoints_TacomaSegment_Large.pdf" aria-label="click to expand image" class="thumbnail" target="_blank"> <img loading="lazy" src="https://oohsttdlink.blob.core.windows.net/media/Default/images/2020_0908_TDLE_StationPoints_Tacoma-Segment_Large.png" alt="Mapa satelital de las alternativas de rutas y de estaciones de Portland Avenue y Tacoma Dome. Haga clic en el mapa para verlo en PDF en tamaño completo." /> </a> <figcaption>Haga clic para ampliar (PDF)</figcaption></figure>
+                    <figure><a href="https://oohsr522brt2020.blob.core.windows.net/media/Default/2023-sidebar/TacomaSegment_Draft_0525.pdf" aria-label="click to expand image" class="thumbnail" target="_blank"> <img loading="lazy" src="https://oohsr522brt2020.blob.core.windows.net/media/Default/2023-sidebar/TacomaSegment_Draft_0525.jpg" alt="Mapa satelital de las alternativas de rutas y de estaciones de Portland Avenue y Tacoma Dome. Haga clic en el mapa para verlo en PDF en tamaño completo." /> </a> <figcaption>Haga clic para ampliar (PDF)</figcaption></figure>
                     </div></div>
                     </div>
                     </div>
